fix: added overflow for devices list

--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -18,6 +18,10 @@
   }
 }
 
+.devices__list {
+  overflow-y: auto;
+}
+
 .devices__title {
   font-weight: 500;
   font-size: 23px;
